change bottom: 0 to top:100% to prevent position shift with the keyboard showup

--- a/main.css
+++ b/main.css
@@ -94,7 +94,7 @@ html,body{
 }
 .inner-container button{
     position: absolute;
-    bottom: 0;
+    top:100%;
     background-color: #4A4A4A;
     color:#fff;
     margin-top: 20px;
